# ugene

./: .clang-format  .gitignore  CMakeLists.txt  README.md  ugene.pri  ugene.pro
src/corelibs/U2Algorithm/: CMakeLists.txt  U2Algorithm.pri  U2Algorithm.pro
src/corelibs/U2Algorithm/transl/: russian.ts  turkish.ts
src/corelibs/U2Core/: CMakeLists.txt  U2Core.pro
src/corelibs/U2Core/transl/: russian.ts  turkish.ts
src/corelibs/U2Designer/: CMakeLists.txt  U2Designer.pro  U2Designer.qrc
src/corelibs/U2Designer/src/: BreakpointHitCountDialog.cpp  BreakpointHitCountDialog.h  DatasetWidget.cpp  DatasetWidget.h  DatasetsController.cpp  DatasetsController.h  DatasetsListWidget.cpp  DatasetsListWidget.h  DbFolderItem.cpp  DbFolderItem.h  DbObjectItem.cpp  DbObjectItem.h  DelegateEditors.cpp  DelegateEditors.h  DesignerUtils.cpp  DesignerUtils.h  DirectoryItem.cpp  DirectoryItem.h  EditBreakpointLabelsDialog.cpp  EditBreakpointLabelsDialog.h  EditMarkerGroupDialog.cpp  EditMarkerGroupDialog.h  EstimationReporter.cpp  EstimationReporter.h  FileItem.cpp  FileItem.h  GrouperEditor.cpp  GrouperEditor.h  GrouperEditorWidget.cpp  GrouperEditorWidget.h  MarkerEditor.cpp  MarkerEditor.h  MarkerEditorWidget.cpp  MarkerEditorWidget.h  NewBreakpointDialog.cpp  NewBreakpointDialog.h  NewGrouperSlotDialog.cpp  NewGrouperSlotDialog.h  OutputFileDialog.cpp  OutputFileDialog.h  (+11 more)
src/corelibs/U2Designer/transl/: russian.ts  turkish.ts
src/corelibs/U2Lang/: CMakeLists.txt  U2Lang.pro  U2Lang.qrc
src/corelibs/U2Lang/transl/: russian.ts  turkish.ts
src/corelibs/U2Private/: CMakeLists.txt  U2Private.pri  U2Private.pro
src/corelibs/U2Private/src/: AppContextImpl.cpp  AppContextImpl.h  AppSettingsImpl.cpp  AppSettingsImpl.h  BundleInfoMac.cpp  BundleInfoMac.h  ConsoleLogDriver.cpp  ConsoleLogDriver.h  CredentialsAskerCli.cpp  CredentialsAskerCli.h  DocumentFormatRegistryImpl.cpp  DocumentFormatRegistryImpl.h  IOAdapterRegistryImpl.cpp  IOAdapterRegistryImpl.h  LogSettings.cpp  LogSettings.h  PluginDescriptor.cpp  PluginDescriptor.h  PluginSupportImpl.cpp  PluginSupportImpl.h  ServiceRegistryImpl.cpp  ServiceRegistryImpl.h  SettingsImpl.cpp  SettingsImpl.h  SleepPreventerMac.cpp  SleepPreventerMac.h  TaskSchedulerImpl.cpp  TaskSchedulerImpl.h
src/corelibs/U2Private/transl/: russian.ts  turkish.ts
src/corelibs/U2Test/: CMakeLists.txt
src/corelibs/U2Test/src/: GTest.cpp  GTest.h  GTestFrameworkComponents.cpp  GTestFrameworkComponents.h  TestRunnerSettings.h  TestRunnerTask.cpp  TestRunnerTask.h
src/corelibs/U2Test/transl/: russian.ts  turkish.ts
src/corelibs/U2View/: CMakeLists.txt  U2View.pro
src/corelibs/U2View/src/: LicenseDialog.cpp  LicenseDialog.h  UndoRedoFramework.cpp  UndoRedoFramework.h  WebWindow.cpp  WebWindow.h
src/corelibs/U2View/transl/: russian.ts  turkish.ts
src/libs_3rdparty/QSpec/: CMakeLists.txt  Doxyfile  QSpec.pri  QSpec.pro  README.md
src/libs_3rdparty/QSpec/src/: GTGlobals.cpp  GTGlobals.h
src/libs_3rdparty/breakpad/: CMakeLists.txt  breakpad.pri  breakpad.pro
src/libs_3rdparty/qscore/: CMakeLists.txt  qscore.pri
src/libs_3rdparty/qscore/src/: QScoreAdapter.cpp  QScoreAdapter.h
src/libs_3rdparty/qtscript/: CMakeLists.txt
src/libs_3rdparty/samtools/: .qmake.conf  CMakeLists.txt  Samtools-common.cmake  samtools.pri  samtools.pro  ugene_custom_io.c  ugene_custom_io.h
src/libs_3rdparty/samtools/src/: SamtoolsAdapter.cpp  SamtoolsAdapter.h
src/libs_3rdparty/samtools/transl/: russian.ts  turkish.ts
src/libs_3rdparty/sqlite3/: CMakeLists.txt  sqlite3.pri
src/libs_3rdparty/zlib/: CMakeLists.txt  zlib.pri
src/libs_3rdparty/zlib/src/: gzread.c  ugene_custom_io.c  zutil.h
src/mtdna/: CMakeLists.txt
src/mtdna/src/: AssemblyWidget.cpp  AssemblyWidget.h  Main.cpp
src/mtdna/src/main_window/: MainWindowImpl.cpp  MainWindowImpl.h  ShutdownTask.cpp  ShutdownTask.h
src/mtdna/src/project_support/: ProjectImpl.cpp  ProjectImpl.h  ProjectServiceImpl.cpp  ProjectServiceImpl.h
src/plugins/api_tests/: CMakeLists.txt  api_tests.pri  api_tests.pro  new 2.php
src/plugins/api_tests/src/: ApiTestsPlugin.cpp  ApiTestsPlugin.h  UnitTestSuite.cpp  UnitTestSuite.h  unittest.h
src/plugins/biostruct3d_view/: CMakeLists.txt  biostruct3d_view.pri  biostruct3d_view.pro  biostruct3d_view.qrc
src/plugins/biostruct3d_view/src/: AnaglyphRenderer.cpp  AnaglyphRenderer.h  BallAndStickGLRenderer.cpp  BallAndStickGLRenderer.h  BioStruct3DColorScheme.cpp  BioStruct3DColorScheme.h  BioStruct3DGLImageExportTask.cpp  BioStruct3DGLImageExportTask.h  BioStruct3DGLRender.cpp  BioStruct3DGLRender.h  BioStruct3DGLWidget.cpp  BioStruct3DGLWidget.h  BioStruct3DSplitter.cpp  BioStruct3DSplitter.h  BioStruct3DSubsetEditor.cpp  BioStruct3DSubsetEditor.h  BioStruct3DViewPlugin.cpp  BioStruct3DViewPlugin.h  GLFrameManager.cpp  GLFrameManager.h  GraphicUtils.cpp  GraphicUtils.h  MolecularSurfaceRenderer.cpp  MolecularSurfaceRenderer.h  SelectModelsDialog.cpp  SelectModelsDialog.h  SettingsDialog.cpp  SettingsDialog.h  StructuralAlignmentDialog.cpp  StructuralAlignmentDialog.h  TubeGLRenderer.cpp  TubeGLRenderer.h  VanDerWaalsGLRenderer.cpp  VanDerWaalsGLRenderer.h  WormsGLRenderer.cpp  WormsGLRenderer.h
src/plugins/biostruct3d_view/transl/: russian.ts  turkish.ts
src/plugins_checker/: CMakeLists.txt  plugins_checker.pri
src/plugins_checker/src/: Main.cpp
src/ugenecl/: CMakeLists.txt  ugenecl.pri
src/ugenecl/src/: DumpHelpTask.cpp  DumpHelpTask.h  DumpLicenseTask.cpp  DumpLicenseTask.h  DumpVersionTask.cpp  DumpVersionTask.h  Main.cpp  TaskStatusBar.cpp  TaskStatusBar.h  TestStarter.cpp  TestStarter.h
src/ugenem/: CMakeLists.txt  ugenem.pro
src/ugenem/src/: SendReportDialog.cpp  SendReportDialog.h  Utils.cpp  Utils.h  main.cpp
src/ugeneui/: CMakeLists.txt  ugeneui.pri  ugeneui.pro  ugeneui.qrc  ugeneui.rc
src/ugeneui/dark/: darkstyle.qrc
src/ugeneui/dark/darkstyle/: darkstyle.qss
src/ugeneui/html/: version_news_en.html  version_news_ru.html
src/ugeneui/src/: Main.cpp
src/ugeneui/src/app_settings/: AppSettingsGUIImpl.h  (+6 more)
src/ugeneui/transl/: russian.ts  turkish.ts
(+6989 files in other folders)
